--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
         <main>
             <h3>The following recording is from the professor and is <i>VERY</i> important. Pay Attention.</h3>
-            <audio controls>
-                <source src="audio.mp3" type="audio/mpeg">
+            <audio controls autoplay>
+                <source src="VideoFile/audio.mp3" type="audio/mpeg">
             </audio>
         </main>
         <section>
