--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <main>
             <h3>The following recording is from the professor and is <i>VERY</i> important. Pay Attention.</h3>
             <audio controls autoplay>
-                <source src="VideoFile/audio.mp3" type="audio/mpeg">
+                <source src="VideoFile/newAudio.ogg" type="audio/ogg">
             </audio>
         </main>
         <section>
