--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="https://www.pngitem.com/pimgs/m/113-1138414_computer-science-png-png-download-computer-science-icon.png"/>    
     </head>
     <body>
-        <h1>Team 404 Brainstorm Meeting Notes</h1>
+        <h1>Team 404 Brainstorming Meeting Notes</h1>
         <sub>Brainstorming / </sub>
         <sub>October 2, 2021</sub>
         <nav>
