--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>
-        Just an extra page to help navigate the NAV
+        Just an extra page to help navigate the NAV and with you lol
     </h1>
     <p>You can use the back arrow to return to the homepage :D</p>
 </body>
