--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
         <meta name="description" content="Meeting Notes">
         <meta charset="UTF-8">
         <title>10/2 Notes</title>
-        <link rel="icon" type="image/png" href="https://www.pngitem.com/pimgs/m/113-1138414_computer-science-png-png-download-computer-science-icon.png"/>    
+        <link rel="icon" type="image/png" href="https://www.pngitem.com/pimgs/m/113-1138414_computer-science-png-png-download-computer-science-icon.png"/>   
+        <link href="index.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Akronim&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Team 404 Brainstorming Meeting Notes</h1>
+        <h1>Team 404 Brainstorm Meeting Notes</h1>
         <sub>Brainstorming / </sub>
-        <sub>October 2, 2021</sub>
         <nav>
             <a href="page1.html">Tester</a> |
             <a href="aboutMe.html">About Me</a>
         </nav>
         <header>
-            <ul>
+            <ul class="Attend">
                 <li>
                     <b>Attendance:</b>
                     <ul>
@@ -31,8 +32,8 @@
             </ul>
         </header>
         <section>
-            <h4>Today</h4>
-            <ul>
+            <h4 class="Today">Today</h4>
+            <ul class="Agenda">
                 <li>
                     <b>Agenda:</b>
                     <ol>
@@ -45,8 +46,8 @@
             </ul>
         </section>
         <section>
-            <h4>From Last time</h4>
-            <ul>
+            <h4 class="Last-Time">From Last time</h4>
+            <ul class="Wrap-Up">
                 <li>
                     <b>Wrap-Up From Last Meeting:</b>
                     <dl>
@@ -63,8 +64,8 @@
             </ul>
         </section>
         <section>
-            <h4>Updates</h4>
-            <ul>
+            <h4 class="Up">Updates</h4>
+            <ul class="Updates">
                 <li>
                     <b>New Business</b>
                 <dl>
@@ -77,33 +78,34 @@
             </ul>
         </section>
         <section>
-            <h4>Finally...</h4>
-            <p><b>Before continuing the meeting, does anyone have any comments/questions about the project or in general for the leads?</b></p>
-            <p>N/A</p>
+            <h4 class="Final">Finally...</h4>
+            <p class="Final-Msg"><b>Before continuing the meeting, does anyone have any comments/questions about the project or in general for the leads?</b></p>
+            <p class="NA">N/A</p>
             <hr>
         </section>
         <section>
             <h2>Project Discussion</h2>
-            <img src="https://assets-global.website-files.com/5a690960b80baa0001e05b0f/5fd8d7063f660a2f634b48a2_Software-project-plan-gantt-chart-example.png" alt="Random Gantt chart for page" width="1200" height="600">
+            <img src="https://assets-global.website-files.com/5a690960b80baa0001e05b0f/5fd8d7063f660a2f634b48a2_Software-project-plan-gantt-chart-example.png" alt="Random Gantt chart for page" class="img-see">
+            <img src="https://assets-global.website-files.com/5a690960b80baa0001e05b0f/5fd8d7063f660a2f634b48a2_Software-project-plan-gantt-chart-example.png" alt="Random Gantt chart for page" class="img-block">
             <h3>The above Gaant Chart displays our updated timeframe</h3>
             <hr>
         </section>
 
         <main>
             <h3>The following recording is from the professor and is <i>VERY</i> important. Pay Attention.</h3>
-            <audio controls autoplay>
+            <audio controls>
                 <source src="VideoFile/newAudio.ogg" type="audio/ogg">
             </audio>
         </main>
         <section>
             <h4>Audio Discussion</h4>
             <div class="Unused">
-                <p>Discuss the recording and <span>please</span> let everyone voice their opinion</p>
-                <p><strong>Remember</strong> these words from the professor while moving forward</p>
+                <p class="S1">Discuss the recording and <span>Please</span> let everyone voice their opinion</p>
+                <p class="S2"><strong>Remember</strong> these words from the professor while moving forward</p>
             </div>
 
             <h3>After listening to the audio, watch this recording of the professor speak about the course</h3>
-            <video width="320" height="240" controls>
+            <video controls>
                 <source src="VideoFile/video.mp4" type="video/mp4">
             </video>
             <details>
