--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <hr>
         </section>
         <div>
-            <h2>Project Discussion</h2>
+            <h2 class="PD">Project Discussion</h2>
             <img src="https://assets-global.website-files.com/5a690960b80baa0001e05b0f/5fd8d7063f660a2f634b48a2_Software-project-plan-gantt-chart-example.png" alt="Random Gantt chart for page" class="img-see">
             <img src="https://assets-global.website-files.com/5a690960b80baa0001e05b0f/5fd8d7063f660a2f634b48a2_Software-project-plan-gantt-chart-example.png" alt="Random Gantt chart for page" class="img-block">
             <h3>The above Gaant Chart displays our updated timeframe</h3>
