--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <a href="aboutMe.html" target="_blank">About Me</a>
         </nav>
         <header>
+            <style>
+                opacity: 1;
+            </style>
             <ul class="Attend">
                 <li>
                     <b>Attendance:</b>
@@ -106,7 +109,7 @@
                 <p class="S1">Discuss the recording and <span>Please</span> let everyone voice their opinion</p>
                 <p class="S2"><strong>Remember</strong> these words from the professor while moving forward</p>
             </div>
-            <p>I will review the video next meeting.</p>
+            <p style="color:blue">I will review the video next meeting.</p>
             <p>Please don't forget.</p>
             <h3>After listening to the audio, watch this recording of the professor speak about the course</h3>
             <video controls>
